Update Readme file and fix multiple main file